service.yml
---
apiVersion: v1
kind: Service
metadata: 
  name: agentms
  namespace: backend
spec: 
  ports: 
    - 
      name: http
      port: 7003
      protocol: TCP
      targetPort: 7003
  selector: 
    app: agentms
  type: ClusterIP
