ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentms
  namespace: backend
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "kong"
    konghq.com/https-redirect-status-code: "301"
    konghq.com/protocols: "https"
    konghq.com/plugins: "cors-plugin"
spec:
  rules:
  - host: app.digitalbanking.groupebia.com
    http:
      paths:
      - path: /agentms
        pathType: Prefix
        backend:
          service:
            name: agentms
            port:
              number: 7003
  tls: 
    - 
      hosts: 
        - app.digitalbanking.groupebia.com
      secretName: app-digitalbanking-groupebia-com
